@@ -15,6 +15,8 @@ Bug Fixes
 
 * Fixed a minor comparison problem in test_decimal.py.
 
+* Fixed a longstanding bug with .select() ignoring 'limit' parameter.
+
 SQLObject 0.7.5
 ===============
 
